Adicionado suporte ao sonar

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+dist: trusty
+
 env:
   - DOCKER_IMAGE_APP="justiandre/example-kotlin-springboot-graphql:$TRAVIS_BRANCH"
 
@@ -8,14 +10,23 @@ language: kotlin
 jdk:
 - oraclejdk8
 
+cache:
+  directories:
+    - '$HOME/.sonar/cache'
+
 services:
   - docker
 
+addons:
+  sonarcloud:
+    organization: "justiandre-github"
+    
 script:
   - ./gradlew clean build
   - docker build -t $DOCKER_IMAGE_APP .
   - docker login -u "$DOCKER_AUTH_USER" -p "$DOCKER_AUTH_PASS"
   - docker push $DOCKER_IMAGE_APP
+  - sonar-scanner
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
