--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,11 +16,12 @@ spring:
 logging:
   level:
     org:
-      tech.justiandre: INFO
-      tech.justi.example.kotlin.springboot.graphql.infrastructure.exception.ValidationException: OFF
       apache.http: INFO
       springframework: INFO
       spring: INFO
       hibernate:
         SQL: DEBUG
         type.descriptor.sql.BasicBinder: TRACE
+    com:
+      andrejustiandre: INFO
+      andrejusti.example.kotlin.springboot.graphql.infrastructure.exception.ValidationException: OFF
